--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.gs-core-1.3-javadoc.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3-javadoc.jar
 file.reference.gs-core-1.3-sources.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3-sources.jar
 file.reference.gs-core-1.3.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3.jar
+file.reference.gs-core-1.3.jar-1=/Users/alvaroberrocal/Downloads/gs-core-1.3/gs-core-1.3.jar
 file.reference.gs-ui-1.3-javadoc.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-ui-1.3-javadoc.jar
 file.reference.gs-ui-1.3-sources.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-ui-1.3-sources.jar
 file.reference.gs-ui-1.3.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-ui-1.3.jar
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.gs-core-1.3.jar}:\
     ${file.reference.gs-ui-1.3-javadoc.jar}:\
     ${file.reference.gs-ui-1.3-sources.jar}:\
-    ${file.reference.gs-ui-1.3.jar}
+    ${file.reference.gs-ui-1.3.jar}:\
+    ${file.reference.gs-core-1.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
