--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,23 +29,11 @@ dist.jar=${dist.dir}/EDP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gs-core-1.3-javadoc.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3-javadoc.jar
-file.reference.gs-core-1.3-sources.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3-sources.jar
 file.reference.gs-core-1.3.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3.jar
-file.reference.gs-core-1.3.jar-1=/Users/alvaroberrocal/Downloads/gs-core-1.3/gs-core-1.3.jar
-file.reference.gs-ui-1.3-javadoc.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-ui-1.3-javadoc.jar
-file.reference.gs-ui-1.3-sources.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-ui-1.3-sources.jar
-file.reference.gs-ui-1.3.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gs-core-1.3-javadoc.jar}:\
-    ${file.reference.gs-core-1.3-sources.jar}:\
-    ${file.reference.gs-core-1.3.jar}:\
-    ${file.reference.gs-ui-1.3-javadoc.jar}:\
-    ${file.reference.gs-ui-1.3-sources.jar}:\
-    ${file.reference.gs-ui-1.3.jar}:\
-    ${file.reference.gs-core-1.3.jar-1}
+    ${file.reference.gs-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
