--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gs-core-1.3.jar=C:\\Users\\alvar\\Desktop\\librerias\\gs-core-1.3.jar
+file.reference.gs-core-1.3.jar-1=/Users/alvaroberrocal/Downloads/gs-core-1.3/gs-core-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gs-core-1.3.jar}
+    ${file.reference.gs-core-1.3.jar}:\
+    ${file.reference.gs-core-1.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
